--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <button class="rock">Rock</button>
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
-    <div class="result">
-        <div class="score">Player: 0 - Computer: 0</div>
-    </div>
+    <button class="reset">Reset</button>
+    <div class="result"></div>
+    <div class="score">Player: 0 - Computer: 0</div>
     </div>
     <script src="./app.js"></script>
 </body>
