--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <h1>ROCK-PAPER-SCISSORS</h1>
     <div class="container">
+    <div class="buttons">
     <button class="rock">Rock</button>
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
+    </div>
     <button class="reset">Reset</button>
     <div class="result"></div>
-    <div class="score">Player: 0 - Computer: 0</div>
-    </div>
+    <div class="score">Player: 0 - Computer: 0</div>    
+    </div>  
+    
     <script src="./app.js"></script>
 </body>
 </html>
